# MastersThesis

./: changelog.txt
Praca/: .gitignore  flake.nix  praca.aux  praca.bbl  praca.blg  praca.ilg  praca.lof  praca.lot  praca.out  praca.run.xml  praca.tex  praca.toc
Praca/Bibliografia/: bibliografia.bib
Praca/Dodatki/: dodatek_a.tex  dodatek_b.tex
Praca/Pakiety/: pakiety.tex
Praca/Result/: .CMakeLists.txt.swp  .flake.lock.swp  CMakeCache.txt  CMakeLists.txt  IronGlutathione.csv  IronGlutathione_tn.csv  Makefile  cmake_install.cmake  sharkModels.hpp  test.cpp  wdbc_data_with_labels.csv  wdbc_data_with_labels_pn.csv  wdbc_data_with_labels_tn.csv
Praca/Result/inc/dlib/: cross.hpp  dlibModels.hpp  eval.hpp  krr.hpp  lda.hpp  linear.hpp  neural.hpp  normalizer.hpp  pca.hpp  sammon.hpp  svm.hpp
Praca/Result/inc/shark/: .neural.hpp.swp  .printEvaluation.hpp.swp  .svm.hpp.swp  csv.hpp  knn.hpp  linear.hpp  logistic.hpp  logistic2.hpp  neural.hpp  normalization.hpp  printEvaluation.hpp  printEvaluation2.hpp  sharkModels.hpp  svm.hpp
Praca/Result/inc/shogun/: cross.hpp  csv.hpp  gb.hpp  knn.hpp  linear.hpp  logistic.hpp  neural.hpp  pca_reduction.hpp  rescale.hpp  rforest.hpp  shogunModels.hpp  svm.hpp  verify.hpp
Praca/Rozdzial1/: rozdzial1.tex
Praca/Rozdzial2/: rozdzial2.tex
Praca/Rozdzial3/: neural_struct.drawio  rozdzial3.tex
Praca/Rozdzial4/: helloworldgraph.cpp  rozdzial4.tex  shogun-acc.cpp  shogun-csv.cpp  shogun-gb.cpp  shogun-kernelpca.cpp  shogun-knn.cpp  shogun-linear.cpp  shogun-log.cpp  shogun-logistic.cpp  shogun-mae.cpp  shogun-mse.cpp  shogun-nn.cpp  shogun-normalizer.cpp  shogun-rf.cpp  shogun-roc.cpp  shogun-svm.cpp  tfruntrainingstep.cpp
Praca/Rozdzial5/: rozdzial5.tex  shark-adaptor.cpp  shark-csv-http.cpp  shark-cv.cpp  shark-dimension-reduction.cpp  shark-knn.cpp  shark-lda-red.cpp  shark-lda.cpp  shark-linear.cpp  shark-linear2.cpp  shark-logistic.cpp  shark-logistic2.cpp  shark-mae.cpp  shark-mse.cpp  shark-neural.cpp  shark-preprocessing.cpp  shark-r2.cpp  shark-rf.cpp  shark-roc.cpp  shark-svm.cpp  shark-svm2.cpp
Praca/Rozdzial6/: csv.cpp  rozdzial6.tex
Praca/Rozdzial7/: rozdzial7.tex
Praca/Rozdzial8/: rozdzial8.tex
Praca/RozdzialTf/: cppconstructor.cpp
Praca/Rysunki/Rozdzial2/: .$perceptron.drawio.bkp  README.md  multithreading.drawio  perceptron.drawio
Praca/Streszczenie/: Streszczenie.tex
Praca/Ustawienia/: ustawienia.tex
